# viskit

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
demo/: Makefile.am  ataflagfix.c  dsappend.c  dsls.c  dssss.c  uvdecode.c  uvlowlevelcopy.c
doc/: dataset.txt  maskitem.txt  uvdata.txt  uvvars.txt
src/: Makefile.am  dataset.c  dataset.h  dsls.c  iostream.c  iostream.h  maskitem.c  maskitem.h  types.h  uvreader.c  uvreader.h  uvstream.c  uvstream.h
viskit/: Makefile.am  dataset.c  dataset.h  iostream.c  iostream.h  maskitem.c  maskitem.h  types.c  types.h  uvio.c  uvio.h  uvreader.c  uvreader.h
